fix too much rendering buttons
- ui improvement on colour-picker button display
- introduce renderDropEndButtons() and renderButtons()
- if buttons more than 5 will go render dropEnd dropdown menu
- else will render normal display
- if buttons more than 12 will have scroll-y

--- a/app/static/styles/visualise.css
+++ b/app/static/styles/visualise.css
@@ -71,11 +71,17 @@ body {
 }
 
 /* text with equal spacing */
-.rsidButton .text {
+.rsidButton .char-evenly-space {
     font-family: monospace;
     white-space: nowrap;
 }
 
 .rsidButton .row > div.col-auto {
     padding-right: 5px;
+}
+
+ul.dropdown-menu.add-scroll {
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 500px;
 }
